--- a/Web.config
+++ b/Web.config
@@ -6,7 +6,9 @@
   -->
 
 <configuration>
-
+    <appSettings>
+        <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+      </appSettings>
     <connectionStrings>
         <add name="PaddingtonConnectionString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\PaddingtonDB.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
@@ -15,5 +17,4 @@
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
     </system.web>
-
 </configuration>
